<resources>
    <string name="app_name">EventMPro organizers</string>
    <string name="http_error_404">Recurso no encontrado</string>
    <string name="http_error_server">Error en servidor</string>
    <string name="http_error_internet">Sin conexion a internet</string>
    <string name="http_error_timeout">El servidor no responde</string>
    <string name="correcto">Registrado Correctamente</string>
    <string name="btn_control">Control</string>
    <string name="btn_registros">Registros</string>
    <string name="control">Control de Registros</string>
    <string name="asis">Asistencia</string>
    <string name="ref1">Refrigerio 1</string>
    <string name="ref2">Refrigerio 2</string>
    <string name="ref3">Refrigerio 3</string>
    <string name="ref4">Refrigerio 4</string>
    <string name="ref5">Refrigerio 5</string>
    <string name="ref6">Refrigerio 6</string>
    <string name="ref7">Refrigerio 7</string>
    <string name="almu">Almuerzo</string>
    <string name="app_write">NFC Tags</string>
    <string name="nfc_nombre">Nombre</string>
    <string name="write_phone">Telefono</string>
    <string name="btn_write">Escribir</string>
    <string name="btn_wrtie">NFC Tags</string>
    <string name="write_mail">Email</string>
    <string name="img_person">imagen de asistentes</string>
    <string name="des">Descripción</string>
    <string name="btn_text_control">Control</string>
    <string name="btn_text_nfc">NFC Tags</string>
    <string name="btn_text_registro">Registros</string>
    <string name="prin_des">Bienvenidos a la aplicación exclusiva para los organizadores del evento, en esta se podrán encontrar diferentes funcionalidades con el fin de facilitar el manejo del evento por parte de los organizadores, entre algunas se encuentran: conteo de refrigerios con TAG’S NFC, escribir TAG’S NFC para los asistentes al evento, control de asistencia en las diferentes actividades y registros de los datos ingresados.</string>
    <string name="alert_msg_nfc">Acerca el tag NFC para escribir.</string>
    <string name="alert_title_nfc">Escribir TAG NFC</string>
    <string name="title_controlnfc">Tag\'s NFC Control</string>
    <string name="nfc_des">Controla todos los aspectos de los Tag’s NFC como leer, escribir y borrar la información de cada uno.</string>
    <string name="btn_text_write">Escribir</string>
    <string name="btn_text_read">Leer</string>
    <string name="btn_text_delete">Eliminar</string>
    <string name="write_nfc">Escribir NFC</string>
    <string name="alert_delete_title">Borrar Etiqueta</string>
    <string name="alert_delete_msg">Acerca la etiqueta NFC para borrar la información.</string>
    <string name="cancel">Cancelar</string>
    <string name="title_read">Leer Etiquetas</string>
    <string name="msg_read">Leer Etiquetas</string>
    <string name="alert_msg_read">Acerca la etiqueta para leerla</string>
    <string name="ok">Ok</string>
    <string name="empy">No se encuentran datos registrados</string>
    <string name="msg_alert">Valor Repetido</string>
    <string name="alert_msg_validar">El usuario ya se encuentra registrado en la actividad</string>
    <string name="btn_text_cargar">Carga tu Archivo</string>
    <string name="principal_objetivo">Descripción</string>
    <string name="principal_description">Bienvenido a EventMP organizers para cargar tu evento por favor descarga el archivo de configuración XML de nuestra página web oficial y selecciónalo desde nuestro explorador de archivos con el botón carga tu archivo.</string>
    <string name="alert_title">Cargar Datos</string>
    <string name="alert_msg">¿Esta seguro de cargar los datos?</string>
    <string name="msj_carga">El archivo selecionado es no valido o esta dañado (Recuerde que el tipo de archivo es .xml)</string>
    <string name="paso2">Ya tienes tu archivo seleccionado correctamente, el siguiente paso es cargarlo a la aplicación con el botón cargar datos o sino estas seguro del archivo seleccionado, puedes volver a seleccionar otro archivo con el botón buscar archivo.</string>
    <string name="seleccion">Archivo Seleccionado</string>
    <string name="btn_text_backup">Cargar Datos</string>
    <string name="btn_text_archivo">Buscar Archivo</string>
    <string name="action_more">Mas</string>
    <string name="action_out">Salir</string>
    <string name="action_info">Info</string>
    <string name="title_activity_prinpro">EventMP</string>
    <string name="alert_title_event">Salir</string>
    <string name="alert_msg_event">¿Está seguro de borrar todos los datos registrados del evento? (Tenga en cuenta que una vez salga del evento, no hay marcha atras)</string>
    <string name="prin_organizers">Organizers</string>
    <string name="btn_text_prin">Principal</string>
    <string name="control_de_registros">Control de Registros</string>
    <string name="control_de_asistencia">Control de Asistencia</string>
    <string name="cantidad_de_asistentes">Cantidad de Asistentes:</string>
    <string name="action_complete">Accion Completada</string>
</resources>
